# robotic_scrub_nurse

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  PLAN.md  README.md  RSN_Anleitung.txt  deployment_guide.md
files/: explanation.txt  joint_limits.yaml  start.sh  ur.urdf.xacro
files/prompts/: ROS_Reihenfolge.txt  gripper.txt  prompts.txt  readme_für_initialisierung.txt  shortcuts.txt
ros_unrelated_scripts/: README_logger.md  aruco_marker_frame_test.py  grounding_dino_realsense_test.py  realsense_manual_capture.py  robotiq_detector_realsense_test.py  scrub_nurse_logger.py  test_prompts.txt  test_yolo_obb_realsense_live.py  ur_rtde_connection_test.py  yolo11_realsense_test.py
src/gripper_force_feedback/: CMakeLists.txt  package.xml
src/gripper_force_feedback/src/: gripper_opener_with_zeroer.py
src/tracking_pkg/: CMakeLists.txt  package.xml
src/tracking_pkg/action/: HandoverTool.action  PickTool.action  ReleaseTool.action  ReturnHome.action  ReturnTool.action
src/tracking_pkg/config/: aruco_markers.yaml  loop_mover_profiles.yaml  system_config.yaml  tool_knowledge_base.yaml  tool_pick_joint_states.yaml
src/tracking_pkg/launch/: joint_state_jogger_launch.py  llm_launch.py  loop_launch.py  loop_with_moveit_launch.py  moveit_launch.py  test_world_model_launch.py  tool_pick_test_launch.py  web_socket_launch.py
src/tracking_pkg/msg/: ExecutionPlan.msg  GraspCandidate.msg  GraspCandidateArray.msg  HandState.msg  OrientedBoundingBox2D.msg  SystemState.msg  ToolDetection.msg  ToolDetectionArray.msg
src/tracking_pkg/rviz/: view_robot_tracking.rviz
src/tracking_pkg/src/execution/: grasp_orientation_utils.py  gripper_opener_with_zeroer.py  joint_state_jogger_node.cpp  loop_mover.cpp  reclaim_controller.py  skill_executor_node.cpp  tool_pick_test_node.cpp
src/tracking_pkg/src/hand_tracker/: hand_tracker.py  mediapipe_and_gesture.py
src/tracking_pkg/src/interfaces/: annotated_image_viewer.py  asr_node.py  scrub_nurse_cli.py  tool_selection.py
src/tracking_pkg/src/llm/: llm_orchestrator_node.py  llm_reasoning_node.py
src/tracking_pkg/src/moveit_mover/: ablage.txt  grasp_approach_pose_service.py  grasp_orientation_utils.py  gripper_mover.py  gripper_opener_with_zeroer.py  loop_mover.cpp  moveit_mover.cpp  moveit_mover_alt.cpp  package.py  reclaim_controller.py  tool_frame_quaternion_helper.py  ur_feedback_socket.py
src/tracking_pkg/src/perception/: aruco_marker_manager.py  hand_tracker.py  instrument_tray_perception_node.py  tool_detection_node.py
src/tracking_pkg/src/publisher/: aruco_marker_120_publisher.py  box_publisher.py  camera_publisher.py  frame_capture_node.py  frame_publisher.py  gesture_pose_publisher.py  handover_sound_publisher.py  joint_states_publisher.py  mir_publisher.py  scrub_nurse_logger.py  static_frame_publisher(without aruco_marker).py  surgery_scene_publisher.py  tool_selection.py  tray_camera_volume_publisher.py
src/tracking_pkg/src/publisher/collisionObjects/daes/: emptyTray.dae  kipferli.dae  medicalBed.dae  surgicalTray.dae  tube.dae  turningTube.dae
src/tracking_pkg/src/publisher/collisionObjects/stls/: base_link.STL  emptyTray.STL  kipferli.STL  surgicalTray.STL  tube.STL  turningTube.STL
src/tracking_pkg/src/reasoning/: grasp_geometry_node.py  grasp_reasoning_node.py  tool_semantics_node.py  world_model_builder.py  world_model_node.py
src/tracking_pkg/src/socket_mover/: socket_gripper_controller.py  socket_mover.py  subpackage.py  ur_feedback_socket.py
src/tracking_pkg/srv/: BuildWorldModel.srv  GetGraspApproachPose.srv  GetToolCandidates.srv  GetWorldModel.srv  GetWorldState.srv
